# Poetry-python

00_what's_microServices/: readme.md
02_mololith_drawbacks/: readme.md
05_Microservices_best_practice/: readme.md
07_git_microservices/: readme.md
08_create_project/fastapi_new/: pyproject.toml
08_create_project/fastapi_new/tests/: test_project.py
09_fastapi_with_poetry/fastapi_poetry/: README.md  pyproject.toml
09_fastapi_with_poetry/fastapi_poetry/src/fastapi_poetry/: main.py
10_microservice_db/microservice_db/: pyproject.toml
10_microservice_db/microservice_db/src/microservice_db/: main.py
