[project]
name = "fastapi-poetry"
version = "0.1.0"
description = ""
authors = [
    {name = "muazam mughal",email = "104276759+MuazamMughal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn[standard] (>=0.34.3,<0.35.0)"
]

[tool.poetry]
packages = [{include = "fastapi_poetry", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
