[project]
name = "microservice-db"
version = "0.1.0"
description = ""
authors = [
    {name = "muazam mughal",email = "104276759+MuazamMughal@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fastapi (>=0.115.13,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pydantic[dotenv] (>=2.11.7,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)"
]

[tool.poetry]
packages = [{include = "microservice_db", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
